--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -2,6 +2,9 @@
 </head>
 
 <body>
+
+  <div class = "col-sm-4 "></div>
+
 	<div class = "col-sm-4 ">
 		<div class = "container text-center ">
 			<div class = "row user" style="margin-bottom: 15px; margin-top:15px">
@@ -22,39 +25,41 @@
 				</div>
 			</div>
 
+      <% @friends.each do |friend| %>
+        <div class = "row user">
+          <div class = "col-sm-4" >
+            <img class="friend-picture" src=" <%= friend["image"][2]["content"] %>   ">
+          </div>
+          <div class = "col-sm-4">
+            <h4 class="user-name text-center"><%= friend["name"] %> </h4>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <span class="glyphicon glyphicon-volume-up" aria-hidden="true">
+                </span> Artist - song bla
+              </li>
+              <li class="list-group-item">Artist - song</li>
+              <li class="list-group-item">Artist - song</li>
+            </ul>
+          </div>
+        </div>
+      <% end %>
 
-			<div class = "row user">
-				<div class = "col-sm-4" >
-					<img class="friend-picture" src="http://img2-ak.lst.fm/i/u/avatar170s/818148bf682d429dc215c1705eb27b98.png">
-				</div>
-				<div class = "col-sm-4">
-					<h4 class="user-name text-center">Username</h4>
-					<ul class="list-group">
-						<li class="list-group-item">
-							<span class="glyphicon glyphicon-volume-up" aria-hidden="true">
-							</span> Artist - song 
-						</li>		
-						<li class="list-group-item">Artist - song</li>
-						<li class="list-group-item">Artist - song</li>		
-					</ul>
-				</div>
-			</div>
 
-			<div class = "row user">
-				<div class = "col-sm-4" >
-					<img class="friend-picture" src="http://img2-ak.lst.fm/i/u/avatar170s/818148bf682d429dc215c1705eb27b98.png">
-				</div>
-				<div class = "col-sm-4">
-					<h4 class="user-name text-center">Username</h4>
-					<ul class="list-group">
-						<li class="list-group-item">
-							Artist - song 
-						</li>		
-						<li class="list-group-item">Artist - song</li>
-						<li class="list-group-item">Artist - song</li>		
-					</ul>
-				</div>
-			</div>
+			<!--<div class = "row user">-->
+				<!--<div class = "col-sm-4" >-->
+					<!--<img class="friend-picture" src="http://img2-ak.lst.fm/i/u/avatar170s/818148bf682d429dc215c1705eb27b98.png">-->
+				<!--</div>-->
+				<!--<div class = "col-sm-4">-->
+					<!--<h4 class="user-name text-center">Username</h4>-->
+					<!--<ul class="list-group">-->
+						<!--<li class="list-group-item">-->
+							<!--Artist - song -->
+						<!--</li>		-->
+						<!--<li class="list-group-item">Artist - song</li>-->
+						<!--<li class="list-group-item">Artist - song</li>		-->
+					<!--</ul>-->
+				<!--</div>-->
+			<!--</div>-->
 
 			
 		</div>
