--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -3,109 +3,32 @@
 
 <body>
 
-  <div class = "col-sm-4 "></div>
+    <div align="center">
+      <img class="user-picture" src=" <%= @user["image"][2]["content"] %>   ">
+      <h1 class="user-name">Hello, <%= @user[ "name"] %></h1>
+    </div>
 
-	<div class = "col-sm-4 text-center">
 		<div class = "container text-center ">
-			<div class = "row user" style="margin-bottom: 15px; margin-top:15px">
-				<div class = "col-sm-4" >
-					<img class="user-picture" src="https://lastfm-img2.akamaized.net/i/u/avatar170s/500a0ec876b65483520049a78b821578.png">
-				</div>
-				<div class = "col-sm-4">
-					<h4 class="user-name text-center">Username</h4>
-					<ul class="list-group">
-						<li class="list-group-item">
-							<span class="glyphicon glyphicon-volume-up" aria-hidden="true">
-							</span> Artist - song 
-						</li>		
-						<li class="list-group-item">Artist - song</li>
-						<li class="list-group-item">Artist - song</li>		
-						<li class="list-group-item">Artist - song</li>		
-					</ul>
-				</div>
-			</div>
 
       <% @friends.each do |friend| %>
         <div class = "row user">
-          <div class = "col-sm-4" >
-            <img class="friend-picture" src=" <%= friend["image"][2]["content"] %>   ">
-          </div>
-          <div class = "col-sm-4">
-            <h4 class="user-name text-center"><%= friend["name"] %> </h4>
-            <ul class="list-group">
-              <% @lastfm.getFriendTracks(friend["name"]).each do |track| %>
-                <li class="list-group-item"> <%= track["artist"]["content"] %> - <%= track["name"] %>
-                	<br>
-                	<div class="text-right comments">
-                		<a type="button" data-toggle="modal" data-target="#comments_<%=track["artist"]["content"].parameterize%>_<%=track["name"].parameterize%>"><%= get_comments_number(track["artist"]["content"], track["name"])%> comments</a> 
-                	</div>
 
-                	<div id="comments_<%=track["artist"]["content"].parameterize%>_<%=track["name"].parameterize%>" class = "modal fade" role = "dialog">
-						<div class="modal-dialog">
-							<div class="modal-content">
-						      <div class="modal-header">
-						        <h4 class="modal-title">
-						        	<%= track["artist"]["content"] %> - <%= track["name"] %>
-						        </h4>
-						      </div>
-						      <div class="modal-body text-center container" style="max-width:570px">
-						      	<ul class = "list-group" >
-						      		<% get_comments(track["artist"]["content"], track["name"]).inspect %>
-						      		<% get_comments(track["artist"]["content"], track["name"]).each do |comment| %>
+            <%= link_to user_path(friend["name"]) do%>
 
-							      		<li class = "list-group-item text-left">
-							      			<div class = "author">
-							      				<p> <% h comment.author %> </p> 
-								      		</div>
-								      		<div class = "comment">
-								      			<p> Comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment </p>
-								      		</div>
-							      		</li>
+              <img class="user-picture" src=" <%= friend["image"][2]["content"] %>   ">
 
-							      	<% end %>
 
-						      		<li class = "list-group-item text-left">
-						      			<div class = "author">
-						      				<p> Author </p> 
-							      		</div>
-							      		<div class = "comment">
-							      			<p> Comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment </p>
-							      		</div>
-						      		</li>
+            <% end %>
 
-						      		<li class = "list-group-item text-left">
-						      			<div class = "author">
-						      				<p> Author </p> 
-							      		</div>
-							      		<div class = "comment">
-							      			<p> Comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment </p>
-							      		</div>
-						      		</li>
-						      	</ul>
-						      	
-					      		<textarea name="comment" cols="74" rows="3"></textarea>
-					      		<div class = "text-right">
-					      			<button type="button" class="btn btn-default" >Submit</button>
-					      		</div>
-						      	
+          <br>
 
-						      </div>
-						      <div class="modal-footer">
-						        <button type="button" class="btn btn-default" data-dismiss="modal">Close
-						        </button>
-						      </div>
-						    </div>
-						</div>
-					</div>
-                </li>
-              <% end %>
-            </ul>
-          </div>
+          <%= link_to user_path(friend["name"]) do%>
+            <h4 class="friends-name text-center"><%= friend["name"] %> </h4>
+          <% end %>
         </div>
       <% end %>
 			
 		</div>
-		
-	</div>
+
 </body>
 
