--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -14,7 +14,7 @@
             </span>
             <span class="text-right comment">
               <a type="button" data-toggle="modal" data-target="#comments_<%=track["artist"]["content"].parameterize%>_<%=track["name"].parameterize%>">
-                <span>Comments: <%= @comments.count.to_s %></span>
+                <span>Comments: <%= searchComments(track["artist"]["content"], track["name"]).count.to_s %></span>
               </a>
             </span>
 
@@ -35,14 +35,14 @@
                   <div class="modal-body text-center container" style="max-width:570px">
                     <ul class = "list-group" >
 
-                      <% @comments.each do |comment| %>
+                      <% searchComments(track["artist"]["content"], track["name"]).each do |comment| %>
 
                           <li class = "comment-group-item text-left">
                             <div class = "author">
-                              <p> Author </p>
+                              <p> <%= comment.author %> </p>
                             </div>
                             <div class = "comment">
-                              <p> <%= comment %> </p>
+                              <p> <%= comment.comment %> </p>
                             </div>
 
                       <% end %>
@@ -51,8 +51,11 @@
 
                     <textarea name="comment" cols="65" rows="3"></textarea>
                     <div class = "text-right">
-                      <button type="button" class="btn btn-default" >Submit</button>
+                      <%= button_to 'Submit', addComment_path, params: {comment: "aaa", artist: track["artist"]["content"], title: track["name"]}  %>
                     </div>
+
+                    <!--addComment(text_area.to_s, track["artist"]["content"], track["name"]-->
+
 
 
                   </div>
