--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -27,8 +27,16 @@
           <% end %>
         </div>
       <% end %>
+
 			
 		</div>
+
+
+    <div align="center">
+    <%= link_to login_path do%>
+        <h4 class="friends-name text-center" style="color: #B90000"> LOGOUT </h4>
+    <% end %>
+    </div>
 
 </body>
 
