--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -3,6 +3,6 @@
 
   <img src="https://carlrobers.files.wordpress.com/2009/10/lastfm_logo-svg-618.png" width="70%" height="70%">
 
-  <a href="http://www.last.fm/api/auth/?api_key=426dda789364f83ca2d606d558e3f17a&cb=http://localhost:3000/login/auth" ><h1 style="color: #B90000">Login</h1></a>
+  <a href="http://www.last.fm/api/auth/?api_key=426dda789364f83ca2d606d558e3f17a&cb=https://ancient-dawn-51448.herokuapp.com/login/auth" ><h1 style="color: #B90000">Login</h1></a>
 
 </center>
