--- a/app/views/error/login.html.erb
+++ b/app/views/error/login.html.erb
@@ -4,5 +4,8 @@
 
   <img src="https://carlrobers.files.wordpress.com/2009/10/lastfm_logo-svg-618.png" width="70%" height="70%">
   <h1>You are not logged in</h1>
+  <%= link_to login_path do%>
+      <h4 class="friends-name text-center" style="color: #B90000"> LOGIN </h4>
+  <% end %>
 
 </center>
