--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -70,4 +70,12 @@
     </ul>
   </div>
 
+  <%= link_to homepage_path do%>
+      <h4 class="friends-name text-center" style="color: #B90000"> BACK </h4>
+  <% end %>
+  <br>
+  <%= link_to login_path do%>
+      <h4 class="friends-name text-center" style="color: #B90000"> LOGOUT </h4>
+  <% end %>
+
 </div>
