--- a/app/views/error/user.html.erb
+++ b/app/views/error/user.html.erb
@@ -4,5 +4,7 @@
 
   <img src="https://carlrobers.files.wordpress.com/2009/10/lastfm_logo-svg-618.png" width="70%" height="70%">
   <h1>User not found</h1>
-
+  <%= link_to homepage_path do%>
+      <h4 class="friends-name text-center" style="color: #B90000"> BACK </h4>
+  <% end %>
 </center>
