--- a/app/assets/stylesheets/_styles.scss
+++ b/app/assets/stylesheets/_styles.scss
@@ -1,6 +1,7 @@
 body {
 	background-color: #000000;
 	font-family: "Open Sans", "Lucida Grande", "Helvetica Neue", Helvetica, Arial, Sans-serif;
+    overflow-x: hidden;
 }
 
 table {
