--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -8,7 +8,9 @@
       <h1 class="user-name">Hello, <%= @user[ "name"] %></h1>
     </div>
 
+
 		<div class = "container text-center ">
+      <h1 style="color: #B90000"><%= @message %> </h1>
 
       <% @friends.each do |friend| %>
         <div class = "row user">
