--- a/app/views/homepage/comments.html.erb
+++ b/app/views/homepage/comments.html.erb
@@ -8,8 +8,8 @@
             <p> <%= comment.author %> </p>
           </div>
           <div class = "author">
-              <p> <%= comment.artist%> </p>
             <p> <%= comment.artist%> </p>
+            <p> <%= comment.title%> </p>
           </div>
           <div class = "comment">
             <p> <%= comment.comment %> </p>
