--- a/app/views/homepage/comments.html.erb
+++ b/app/views/homepage/comments.html.erb
@@ -22,3 +22,16 @@
 
 
 </div>
+
+<br>
+
+<div class="text-center">
+
+<%= link_to homepage_path do%>
+    <h4 class="friends-name text-center" style="color: #B90000"> BACK </h4>
+<% end %>
+<br>
+<%= link_to login_path do%>
+    <h4 class="friends-name text-center" style="color: #B90000"> LOGOUT </h4>
+<% end %>
+</div>
